assets/css/ftboth.css
h4 {
  color: #222;
}

header > h4 {
  color: #222;
}

code {
  color: #f43d00;
  border-color: transparent;
  background-color: #f7f7f9;
  font-size: 12px;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  padding: 1px 4px;
}

pre {
  background-color: #272822;
  border: 1px solid rgba(0, 0, 0, 0.15);
  color: #f8f8f2;
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
  border-radius: 8px;
  margin-top: 1em;
  margin-bottom: 1em;
  font-size: 13px;
  overflow-x: auto;
  word-break: normal;
  word-wrap: normal;
}

pre code {
  font-size: 13px;
}

pre code.text{
  word-wrap: normal;
  overflow-wrap: normal;
  white-space: pre;
  word-break: normal;
}

img.post-right {
  float: right;
  clear: both;
  margin-top: 0;
  margin-left: 10px;
  margin-bottom: 10px;
}

img.licence-icon {
  margin-top: 2px;
  vertical-align: text-top;
}

.navbar .brand {
  font-family: 'Open Sans Condensed', sans-serif;
  font-weight: 100;
  color: #f43d00;
}

.well small {
  color: #222;
}

body {
  padding-bottom: 0;
}

footer {
  width: 100%;
  background-color: #272822;
  border-top: 4px solid #f43d00;
  color: #ffffff;
  min-height: 150px;
  margin-top: 40px;
  padding-top: 20px;
  padding-bottom: 20px;
}

footer div.row {
  margin-left: 60px;
}

[class^="icon-"],
[class*=" icon-"] {
  margin-top: 2px;
}

span.post-nav [class^="icon-"],
span.post-nav [class*=" icon-"] {
  margin-top: 3px;
}

.bs-icon {
  float: left;
  margin: -2px 5px 0 0;
  opacity: 0.8;
}

/*bs-icon-h4 {
  float: left;
  margin: 8px 5px 0 0;
  opacity: 0.8;
}*/

span.post-nav a {
  font-size: 11px;
}
 /* divs containing snippets in side bars */
div.side-snippet {
  margin-bottom: 2em;
}

div.side-snippet p {
  font-size: 12px;
}

div.side-snippet i {
  margin-top: 0px;
}

div.side-snippet ul.unstyled {
  font-size: 10px;
}

div.side-snippet ul.unstyled li {
  line-height: 20px;
}

figure {
  text-align: center;
  margin-bottom: 3em;
}

/*figure img {
}*/

figcaption {
  font-family: 'Open Sans Condensed', sans-serif;
  font-weight: 300;
  line-height: 20px;
  color: #f43d00;
  font-size: 17.5px;
  margin-top: 0.5em;
}

.thumbnails figcaption {
  text-align: center;
}

footer h4 {
  color: #ffffff;
}

table {
  max-width: 100%;
  background-color: transparent;
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
  margin-bottom: 3em;
  margin-top: 3em;
}
table caption {
  font-family: 'Open Sans Condensed', sans-serif;
  font-weight: 300;
  line-height: 20px;
  color: #f43d00;
  font-size: 17.5px;
  margin-bottom: 1em;
}
table th,
table td {
  padding: 8px;
  line-height: 20px;
  text-align: left;
  vertical-align: top;
  border-top: 1px solid #dddddd;
}
table th {
  font-weight: bold;
}
table thead th {
  vertical-align: bottom;
}
table caption + thead tr:first-child th,
table caption + thead tr:first-child td,
table colgroup + thead tr:first-child th,
table colgroup + thead tr:first-child td,
table thead:first-child tr:first-child th,
table thead:first-child tr:first-child td {
  border-top: 0;
}
table tbody + tbody {
  border-top: 2px solid #dddddd;
}
table table {
  background-color: #ffffff;
}
table th,
table td {
  padding: 4px 5px;
}
table {
  border: 1px solid #dddddd;
  border-collapse: separate;
  *border-collapse: collapse;
  border-left: 0;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}
table th,
table td {
  border-left: 1px solid #dddddd;
}
table caption + thead tr:first-child th,
table caption + tbody tr:first-child th,
table caption + tbody tr:first-child td,
table colgroup + thead tr:first-child th,
table colgroup + tbody tr:first-child th,
table colgroup + tbody tr:first-child td,
table thead:first-child tr:first-child th,
table tbody:first-child tr:first-child th,
table tbody:first-child tr:first-child td {
  border-top: 0;
}
table thead:first-child tr:first-child > th:first-child,
table tbody:first-child tr:first-child > td:first-child {
  -webkit-border-top-left-radius: 4px;
  -moz-border-radius-topleft: 4px;
  border-top-left-radius: 4px;
}
table thead:first-child tr:first-child > th:last-child,
table tbody:first-child tr:first-child > td:last-child {
  -webkit-border-top-right-radius: 4px;
  -moz-border-radius-topright: 4px;
  border-top-right-radius: 4px;
}
table thead:last-child tr:last-child > th:first-child,
table tbody:last-child tr:last-child > td:first-child,
table tfoot:last-child tr:last-child > td:first-child {
  -webkit-border-bottom-left-radius: 4px;
  -moz-border-radius-bottomleft: 4px;
  border-bottom-left-radius: 4px;
}
table thead:last-child tr:last-child > th:last-child,
table tbody:last-child tr:last-child > td:last-child,
table tfoot:last-child tr:last-child > td:last-child {
  -webkit-border-bottom-right-radius: 4px;
  -moz-border-radius-bottomright: 4px;
  border-bottom-right-radius: 4px;
}
table tfoot + tbody:last-child tr:last-child td:first-child {
  -webkit-border-bottom-left-radius: 0;
  -moz-border-radius-bottomleft: 0;
  border-bottom-left-radius: 0;
}
table tfoot + tbody:last-child tr:last-child td:last-child {
  -webkit-border-bottom-right-radius: 0;
  -moz-border-radius-bottomright: 0;
  border-bottom-right-radius: 0;
}
table caption + thead tr:first-child th:first-child,
table caption + tbody tr:first-child td:first-child,
table colgroup + thead tr:first-child th:first-child,
table colgroup + tbody tr:first-child td:first-child {
  -webkit-border-top-left-radius: 4px;
  -moz-border-radius-topleft: 4px;
  border-top-left-radius: 4px;
}
table caption + thead tr:first-child th:last-child,
table caption + tbody tr:first-child td:last-child,
table colgroup + thead tr:first-child th:last-child,
table colgroup + tbody tr:first-child td:last-child {
  -webkit-border-top-right-radius: 4px;
  -moz-border-radius-topright: 4px;
  border-top-right-radius: 4px;
}
table tbody > tr:nth-child(odd) > td,
table tbody > tr:nth-child(odd) > th {
  background-color: #f9f9f9;
}
table td[class*="span"],
table th[class*="span"],
.row-fluid table td[class*="span"],
.row-fluid table th[class*="span"] {
  display: table-cell;
  float: none;
  margin-left: 0;
}
.table td.span1,
.table th.span1 {
  float: none;
  width: 44px;
  margin-left: 0;
}
.table td.span2,
.table th.span2 {
  float: none;
  width: 124px;
  margin-left: 0;
}
.table td.span3,
.table th.span3 {
  float: none;
  width: 204px;
  margin-left: 0;
}
.table td.span4,
.table th.span4 {
  float: none;
  width: 284px;
  margin-left: 0;
}
.table td.span5,
.table th.span5 {
  float: none;
  width: 364px;
  margin-left: 0;
}
.table td.span6,
.table th.span6 {
  float: none;
  width: 444px;
  margin-left: 0;
}
.table td.span7,
.table th.span7 {
  float: none;
  width: 524px;
  margin-left: 0;
}
.table td.span8,
.table th.span8 {
  float: none;
  width: 604px;
  margin-left: 0;
}
.table td.span9,
.table th.span9 {
  float: none;
  width: 684px;
  margin-left: 0;
}
.table td.span10,
.table th.span10 {
  float: none;
  width: 764px;
  margin-left: 0;
}
.table td.span11,
.table th.span11 {
  float: none;
  width: 844px;
  margin-left: 0;
}
.table td.span12,
.table th.span12 {
  float: none;
  width: 924px;
  margin-left: 0;
}

blockquote {
  padding: 0 0 0 15px;
  margin: 0 0 20px;
  float: right;
  padding-right: 15px;
  padding-left: 0;
  border-right: 5px solid #f43d00; /* #eeeeee; */
  border-left: 0;
  margin-left: 4em;
}
blockquote p {
  font-size: 14px;
  line-height: 20px;
  color: #f43d00;
}
blockquote small {
  display: block;
  line-height: 20px;
  color: #999999;
}
blockquote small:before {
  content: '\2014 \00A0';
}
blockquote.pull-right {
  float: right;
  padding-right: 15px;
  padding-left: 0;
  border-right: 5px solid #eeeeee;
  border-left: 0;
}
blockquote.pull-right p,
blockquote.pull-right small {
  text-align: right;
}
blockquote.pull-right small:before {
  content: '';
}
blockquote.pull-right small:after {
  content: '\00A0 \2014';
}
q:before,
q:after,
blockquote:before,
blockquote:after {
  content: "";
}

blockquote p a {
  color: #000000;
}

li a i:hover {
  background-color: rgba(244,61,0,0.25);
}

div.altmetric-embed a img {
  vertical-align: baseline;
}

.altmetric-embed.popover {
  border: none;
  -moz-border-radius: 0;
  -webkit-border-radius: 0;
  border-radius: 0;
  -moz-box-shadow: none;
  -webkit-box-shadow: none;
  border-box-shadow: none;
  width: auto;
  background-color: transparent;
}

kbd {
/*
 * http://meta.superuser.com/questions/4788/css-for-the-new-kbd-style
 * 
 */
  -moz-border-radius:3px;
  -moz-box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
  -webkit-border-radius:3px;
  -webkit-box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
  background-color:#f7f7f7;
  border:1px solid #ccc;
  border-radius:3px;
  box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
  color:#333;
  display:inline-block;
  font-family:Arial,Helvetica,sans-serif;
  font-size:11px;
  line-height:1.4;
  margin:0 .1em;
  padding:.1em .6em;
  text-shadow:0 1px 0 #fff;
}

.ftboth-img-right {
  margin-right: 1em;
}

